voucher requsion  fixed

--- a/KGERP/Views/Vouchers/RequisitionVoucherEntry.cshtml
+++ b/KGERP/Views/Vouchers/RequisitionVoucherEntry.cshtml
@@ -925,7 +925,7 @@
                         $('#txtParticular').text(
                             "Approved Demand: " + data.ApprovedDemand
                             + ", Unit Price: " + data.UnitPrice
-                            + ", Total Amount: " + showApprovedDemand.val() * showUnitPrice.val() 
+                            + ", Total Amount: " + data.TotalAmount 
                         );
                     }
                 }
