material received billing map problem

--- a/KGERP/Views/Employee/Details.cshtml
+++ b/KGERP/Views/Employee/Details.cshtml
@@ -229,14 +229,25 @@
         <table class="table table-striped table-bordered ">
             <thead>
                 <tr>
-                    <th>Inventory Type</th>
-                    <th>Effective Date</th>
-                    <th>Description</th>
+                    <th>SL</th>
+                    <th>Operation/Action Type</th>
+                    <th>Action Date</th>
+                    <th>Start Date</th>
+                    <th>End Date</th>
+                    <th>Reason/Reference</th>
+                    <th>Remarks</th>
                     <th>Attachments</th>
-                    <th>Detail</th>
+
                 </tr>
             </thead>
-            <tbody></tbody>
+            <tbody>
+
+
+
+
+
+
+            </tbody>
         </table>
     </div>
 
